fix: jwt token
